[package]
name = "matchstick"
version = "0.4.2"
authors = ["LimeChain <limechain.tech>"]
edition = "2021"

[dependencies]
graph = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-core = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-chain-ethereum = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-graphql = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-mock = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-runtime-test = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
graph-runtime-wasm = { git = "https://github.com/graphprotocol/graph-node", rev = "2d36abb15a14e5b529bc3960ac845349ac80dacd" }
wasmtime = "0.27.0"
tokio = "1.15.0"
anyhow = "1.0"
lazy_static = "1.4.0"
async-trait = "0.1.50"
colored = "2"
clap = "2.33.3"
serde_json = "1.0.59"
run_script = "0.9"
regex = "1.5.4"
serde_yaml = "0.8.21"
graphql-parser = "0.4.0"

[dev-dependencies]
serial_test = "0.5.1"
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "lutter/graph-0.15.0" }
