[package]
name = "matchstick"
version = "0.5.5"
authors = ["LimeChain <limechain.tech>"]
edition = "2021"

[dependencies]
graph = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-core = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-chain-ethereum = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-graphql = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-mock = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-runtime-test = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
graph-runtime-wasm = { git = "https://github.com/graphprotocol/graph-node", rev = "2eaf730d48c37c72b49bca9f7536cd59fe5ad254" }
wasmtime = "0.27.0"
tokio = "1.15.0"
anyhow = "1.0"
lazy_static = "1.4.0"
async-trait = "0.1.50"
colored = "2"
clap = "2.33.3"
serde_json = "1.0.59"
run_script = "0.9"
regex = "1.5.4"
serde_yaml = "0.8.21"
graphql-parser = "0.4.0"

[dev-dependencies]
serial_test = "0.5.1"
