[package]
name = "matchstick"
version = "0.6.0"
authors = ["LimeChain <limechain.tech>"]
edition = "2021"

[dependencies]
graph = { git = "https://github.com/LimeChain/graph-node", rev = "386af066c30d996fb8f9d4b48facf6590997759e" }
graph-chain-ethereum = { git = "https://github.com/LimeChain/graph-node", rev = "386af066c30d996fb8f9d4b48facf6590997759e" }
graph-graphql = { git = "https://github.com/LimeChain/graph-node", rev = "386af066c30d996fb8f9d4b48facf6590997759e" }
graph-runtime-test = { git = "https://github.com/LimeChain/graph-node", rev = "386af066c30d996fb8f9d4b48facf6590997759e" }
graph-runtime-wasm = { git = "https://github.com/LimeChain/graph-node", rev = "386af066c30d996fb8f9d4b48facf6590997759e" }
wasmtime = "0.27.0"
tokio = "1.15.0"
anyhow = "1.0"
lazy_static = "1.4.0"
async-trait = "0.1.50"
colored = "2"
clap = "2.33.3"
run_script = "0.9"
regex = "1.5.4"
serde = "1.0.188"
serde_json = "1.0.59"
serde_yaml = "0.8.21"
graphql-parser = "0.4.0"

[dev-dependencies]
serial_test = "0.5.1"
